test/compilable/test2659.d
// REQUIRED ARGS:

int test2659()
{
    return (0, 1);
}
