test/fail_compilation/fail282.d
  //template_class_09.
	template Template(int i) {
 	    class Class : Template!(i+1).Class{
 	    }
 	}
 	
 	alias Template!(0).Class Class0;
